@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam monochrome true

package util {
    class "componentized<T>" as componentized {
    }
}

package combat {
    class status_effect {
    }
}

package engine {
    class actor {
    }
}

package systems {

    '' ========================================================
    '' health_systems.h
    '' ========================================================
    class health_system {
        - current_hp : float
        - max_hp : float
        - armor : float
        - max_armor : float
        - active_effects : std::vector<std::unique_ptr<combat::status_effect>>
        + health_system(hp : float, max : float, arm : float, max_arm : float)
        + apply_damage(amount : float) : void
        + apply_heal(amount : float) : void
        + apply_shield(amount : float) : void
        + apply_true_damage(amount : float) : void
        + add_effect(effect : std::unique_ptr<combat::status_effect>, owner : engine::actor&) : void
        + process_effects(dt : float, owner : engine::actor&) : void
        + is_dead() : bool const
        -- Friends --
        friend class util::componentized<health_system>
    }
}

'' Inheritance
util::componentized <|-- systems::health_system

'' Dependencies
systems::health_system ..> combat::status_effect
systems::health_system ..> engine::actor

@enduml